[package]
authors = ["Oleksii Karpenko <alexkarpenko@yahoo.com>"]
categories = ["asynchronous"]
description = "Simple Async Cron Scheduler for Tokio"
edition = "2021"
rust-version = "1.86"
homepage = "https://github.com/alex-karpenko/sacs"
keywords = ["cron", "async", "job", "scheduler", "tokio"]
license = "MIT"
name = "sacs"
readme = "README.md"
repository = "https://github.com/alex-karpenko/sacs"
version = "0.9.2"
exclude = [".github/**", ".vscode/**", "TODO.md", "Cargo.lock", "target/**", ".gitignore", "mutants.*/**"]

[dependencies]
chrono = { version = "0.4.20", default-features = false, features = ["std", "clock"] }
cron-lite = { version = "0.3.1", default-features = false }
futures = { version = "0.3.30", default-features = false, features = ["alloc", "std", "async-await"] }
thiserror = "2.0"
tokio = { version = "1.38.2", features = ["time", "macros", "sync", "signal", "rt", "rt-multi-thread"] }
tracing = { version = "0.1.40", default-features = false, features = ["std", "attributes"] }
uuid = { version = "1.8.0", features = ["fast-rng", "v4"] }

[features]
async-trait = []
tz = ["cron-lite/tz"]

[dev-dependencies]
opentelemetry = { version = "0.31.0", features = ["trace", "logs"] }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio", "tokio"] }
opentelemetry-otlp = { version = "0.31.0", features = ["tokio", "trace", "tonic", "grpc-tonic"] }
tracing-opentelemetry = "0.32.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
tonic = { version = "0.14.5" }
ntest = "0.9.3"
